# cards

./: .env.template  .gitignore  Cargo.toml
cards_application/: Cargo.toml
cards_application/src/: lib.rs
cards_core/: Cargo.toml
cards_core/migrations/20170819171846_create_languages/: down.sql  up.sql
cards_core/migrations/20170819174125_create_sex/: down.sql  up.sql
cards_core/migrations/20170819201846_create_words/: up.sql
cards_core/migrations/20170820124143_create_translations/: down.sql  up.sql
cards_core/migrations/20170821175101_create_translation_word_view/: down.sql  up.sql
cards_core/src/: connection.rs  lib.rs  models.rs  repository.rs  service.rs
cards_core/tests/: connection.rs  repository.rs  service.rs  tests.rs
cards_translate/: Cargo.toml
cards_translate/src/: lib.rs  service.rs
