[package]
name = "cards_core"
version = "0.1.0"
authors = ["keyridan <keyridan@gmail.com>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres", "chrono", "large-tables"] }
diesel_codegen = { version = "0.16.0", features = ["postgres", "dotenv"] }
dotenv = "0.9.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"

[[test]]
name = "tests"