[package]
name = "cards_translate"
version = "0.1.0"
authors = ["keyridan <keyridan@gmail.com>"]

[dependencies]
translation = {git = "https://github.com/keyridan/translation.git"}

#http
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

# json
serde_json="1.0"
serde = "1.0"
serde_derive="1.0"

dotenv = "0.9.0"